--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -28,6 +28,5 @@
 <div align="center">
     <h1>Welcome to schiu V2 the quarkus web application</h1>
     <h2>This application will be deployed on Kubernetes.</h2>
-</div>
-</body>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/eOrNdBpGMv8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></body>
 </html>
